--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#Main-Content{
+  width: 100vw;
+  height: 100vh;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#Search-Summoner{
+  width: 500px;
+}
