--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,19 @@ body {
   justify-content: center;
 }
 #search-summoner{
-  width: 500px;
+  width: 70%;
+  margin-bottom: 20px;
 }
 #search-summoner-button{
   margin-top: 10px;
   text-align: center;
+}
+#search-form{
+  width: 100%;
+}
+#width-control{
+  width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
