--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  min-height: 100vh;
+  background-image: url("./images/background.jpg");
+  background-size: cover;
 }
 #main-content{
   width: 100vw;
   height: 100vh;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,5 +42,15 @@ td{
 }
 #top-champs{
   width: 40%;
+  margin: 0 auto;
+}
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 2px !important;
+  background-color: #efefef;
+  text-align: center;
 }
 
