--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   min-height: 100vh;
-  background-image: url("./images/background.jpg");
+  background-image: url("./images/background02.jpg");
   background-size: cover;
 }
 #main-content{
@@ -14,15 +14,23 @@ body {
   justify-content: center;
 }
 #search-summoner{
-  width: 70%;
+  width: 100%;
   margin-bottom: 20px;
 }
-#search-summoner-button{
-  margin-top: 10px;
-  text-align: center;
-}
-#search-form{
+#search-bar{
   width: 100%;
+  overflow: hidden;
+}
+#search-summoner-input{
+  float: left;
+  width: 80%;
+  margin-right: 5px;
+}
+#search-summoner-button{
+  overflow: hidden;
+}
+#button-height{
+  height: 38px;
 }
 #width-control{
   width: 600px;
@@ -41,8 +49,18 @@ td{
   border-top: 0px !important; /* Used to remove the border */
 }
 #top-champs{
-  width: 40%;
   margin: 0 auto;
+}
+#summoner-info{
+  width: 100%;
+  display: flex;
+}
+#summoner-icon{
+  width: 80px;
+}
+#summoner-name{
+  flex: 1;
+  align-self: center;
 }
 .footer {
   position: absolute;
@@ -53,4 +71,16 @@ td{
   background-color: #efefef;
   text-align: center;
 }
-
+.no-margin-header{
+  margin: 0 !important;
+}
+.no-padding-column{
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+#most-played-table{
+  margin-top: 3px !important;
+}
+.centered-form-field{
+  width: 100%;
+}
