--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   background-image: url("./images/background02.jpg");
   background-size: cover;
 }
-#main-content{
+.main-content{
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -31,8 +31,14 @@ body {
 #button-height{
   height: 38px;
 }
-#width-control{
+.width-control{
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.width-control2{
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,9 +86,26 @@ td{
 #most-played-table{
   margin-top: 3px !important;
 }
-.centered-form-field{
-  width: 100%;
-}
 .region-select{
   width: 110px;
 }
+#criteria-bar{
+  display: flex;
+  min-height: 150px;
+}
+.criteria{ 
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.criteria-content{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.no-margin{
+  margin: 0 !important;
+}
+
+
