--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,9 @@ td{
 .no-margin{
   margin: 0 !important;
 }
+.no-padding{
+  padding: 0 !important;
+}
 .match-table{
   margin: 10px;
   width: 100%;
@@ -133,4 +136,46 @@ td{
 .icon{
   margin: 0px 5px 0px 5px;
 }
-
+.ui.modal{
+  background: #1b1c1d !important;
+  color: white !important;
+}
+.ui.modal > div, .ui.modal > div > div{
+  background: #1b1c1d !important;
+  color: white !important;
+}
+.ui.modal > div > div > .ui.header {
+  color: white !important;
+  text-align: center;
+  font-weight: 100 !important;
+}
+.ui.modal > .header{
+  text-align: center;
+  font-weight: 100 !important;
+}
+.match-found-player-bar{
+  padding-top: 5px !important;
+}
+.bottom-border{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+.comment-header{
+  margin-right: 5px;
+}
+.answer-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.countdown{
+  margin-left: 15px;
+  margin-right: 15px;
+  height: 60px;
+  width: 60px;
+}
+canvas{
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 60px;
+}
