--- a/src/index.css
+++ b/src/index.css
@@ -78,10 +78,21 @@ td{
   position: absolute;
   right: 0;
   bottom: 0;
-  left: 0;
-  padding: 2px !important;
-  background-color: #efefef;
-  text-align: center;
+  display: flex;
+  justify-content: right;
+}
+.footer > .footer-bg {
+  text-align: right;
+  background-color: #000000c7;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  padding: 7px;
+  border-radius: 2px;
+}
+.footer > .footer-bg > .footer-message {
+  margin-right: 7px;
+  margin-left: 7px;
 }
 .no-margin-header{
   margin: 0 !important;
