added hide overflow for languages when too many languages are chosen. Now showing agegroups for matches

--- a/src/index.css
+++ b/src/index.css
@@ -238,6 +238,9 @@ canvas{
 .comment-box {
   word-wrap: break-word;
 }
+.language-box {
+  overflow: hidden;
+}
 .item {
   padding: 0 !important;
 }
